[REFACTOR] Implement Async to Service and Controller